--- a/package.json
+++ b/package.json
@@ -29,7 +29,16 @@
     "moment",
     "format"
   ],
-  "author": "faturachmanyusup",
+  "author": {
+    "name": "Faturachman Yusup",
+    "email": "faturachmany@gmail.com",
+    "url": "https://github.com/faturachmanyusup"
+  },
+  "contributors": [{
+    "name": "Alwi Gunawan",
+    "email": "alwigunawan3104@gmail.com",
+    "url": "https://github.com/alwignw"
+  }],
   "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
