--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - name: install
+        run: npm install
       - name: build
         run: npm run build
       - name: test
