--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "*"
   },
   "scripts": {
-    "build": "npx eslint . --ext .ts && npx tsc && jest --runInBand --verbose",
+    "build": "npx eslint . --ext .ts && npx tsc",
+    "build:test": "npx eslint . --ext .ts && npx tsc && jest --runInBand --verbose",
     "test": "npx eslint . --ext .ts && npx tsc && jest --watchAll --coverage --runInBand --verbose",
     "lint": "npx eslint . --ext .ts",
     "lint:fix": "npx eslint . --ext .ts --fix"
